added modal to all sizes

--- a/css/_1000.scss
+++ b/css/_1000.scss
@@ -91,7 +91,25 @@
 	}
 }
 
+/*
+  ========================================
+  Modals
+  ========================================
+*/
 
+.modal {
+	top: 8em;
+	left: 30%;
+	padding: 3em;
+	width: 40%;
+	.modal-blurb {
+	}
+}
+.hide-modal {
+	position: absolute;
+	top: 1em;
+	right: 1.2em;
+}
 
 /*
   ========================================
