--- a/css/style.css
+++ b/css/style.css
@@ -361,11 +361,40 @@ header {
   Modal
   ========================================
 */
-.modal-backdrop {
-  display: none; }
-
 .modal {
-  display: none; }
+  display: block;
+  background: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 3px 3px #aeaeae;
+  position: absolute;
+  z-index: 999;
+  top: 5em;
+  left: 0;
+  padding: 2em; }
+  .modal .modal-blurb {
+    font-style: normal;
+    line-height: 2em;
+    width: 100%;
+    text-align: left; }
+  .modal h3:first-letter {
+    font-size: 80px;
+    font-size: 5em;
+    float: left;
+    margin-top: .2em;
+    margin-right: .07em;
+    font-family: "freight-sans-pro",sans-serif;
+    font-style: normal;
+    font-weight: bold; }
+  .modal a {
+    color: #91a1ba;
+    font-style: italic;
+    text-align: right;
+    font-size: 16px;
+    font-size: 1em; }
+
+.hide-modal {
+  position: absolute;
+  top: 1em;
+  right: 1.2em; }
 
 /*
   ========================================
@@ -573,34 +602,10 @@ footer {
     display: none; }
 
   .modal {
-    display: block;
-    background: rgba(255, 255, 255, 0.9);
-    box-shadow: 0 3px 3px #aeaeae;
-    position: absolute;
-    z-index: 999;
-    top: 8.2em;
-    left: 30%;
-    padding: 2em 7em; }
-    .modal .modal-blurb {
-      font-style: normal;
-      line-height: 2em;
-      width: 350px;
-      text-align: left; }
-    .modal h3:first-letter {
-      font-size: 80px;
-      font-size: 5em;
-      float: left;
-      margin-top: .2em;
-      margin-right: .07em;
-      font-family: "freight-sans-pro",sans-serif;
-      font-style: normal;
-      font-weight: bold; }
-    .modal a {
-      color: #91a1ba;
-      font-style: italic;
-      text-align: right;
-      font-size: 16px;
-      font-size: 1em; }
+    top: 8em;
+    left: 10%;
+    padding: 2em;
+    width: 80%; }
 
   .hide-modal {
     position: absolute;
@@ -695,6 +700,22 @@ footer {
       float: left;
       margin: 2em 0 0 2.5em;
       vertical-align: middle; }
+
+  /*
+    ========================================
+    Modals
+    ========================================
+  */
+  .modal {
+    top: 8em;
+    left: 30%;
+    padding: 3em;
+    width: 40%; }
+
+  .hide-modal {
+    position: absolute;
+    top: 1em;
+    right: 1.2em; }
 
   /*
     ========================================
