--- a/css/style.scss
+++ b/css/style.scss
@@ -380,9 +380,9 @@ header {
   ========================================
 */
 
-// .modal-backdrop {
-// 	display: none;
-// }
+.modal-backdrop {
+	display: none;
+}
 // .modal {
 // 	display: none;
 // }
